--- a/index4.html
+++ b/index4.html
@@ -9,10 +9,9 @@
     <title>Gallery</title>
 </head>
 <body class>
-    <header class="masthead">
-    <div class="inner">
-    <div class="logo"></div>
+    
     <nav>
+      <img src="images/logo.png">
       <ul>
         <li>
           <a href="index.html" target="_blank">About</a>
@@ -25,8 +24,7 @@
         </li>
       </ul>
     </nav>
-    </div>
-    </header>
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <svg viewBox="0 0 960 300">
